Trying to stop shadow cropping issues

--- a/css/style.css
+++ b/css/style.css
@@ -410,6 +410,7 @@ form { width: 100%; }
 
 .ui-section-hero--image {
   margin: var(--ui-gap-hero);
+  overflow:visible;
 }
 
 .ui-section-hero--image img {
